--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,10 @@
 	"extends": "@ljharb",
 
 	"rules": {
-		"id-length": "off",
-		"sort-keys": "off",
+		"new-cap": [2, {
+			"capIsNewExceptions": [
+				"GetIntrinsic",
+			],
+		}],
 	},
 }
