--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
 	"extends": "@ljharb/tsconfig",
 	"compilerOptions": {
-		"target": "es5",
+		"target": "ES2021",
 	},
+	"exclude": [
+		"coverage",
+	],
 }
