--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-	"name": "dunder-proto",
+	"name": "es-define-property",
 	"version": "1.0.1",
-	"description": "If available, the `Object.prototype.__proto__` accessor and mutator, call-bound",
-	"main": false,
+	"description": "`Object.defineProperty`, but not IE 8's broken one.",
+	"main": "index.js",
+	"types": "./index.d.ts",
 	"exports": {
-		"./get": "./get.js",
-		"./set": "./set.js",
+		".": "./index.js",
 		"./package.json": "./package.json"
 	},
 	"sideEffects": false,
@@ -14,8 +14,8 @@
 		"prepublish": "not-in-publish || npm run prepublishOnly",
 		"prepublishOnly": "safe-publish-latest",
 		"prelint": "evalmd README.md",
-		"lint": "eslint --ext=.js,.mjs .",
-		"postlint": "tsc -p . && attw -P",
+		"lint": "eslint --ext=js,mjs .",
+		"postlint": "tsc -p .",
 		"pretest": "npm run lint",
 		"tests-only": "nyc tape 'test/**/*.js'",
 		"test": "npm run tests-only",
@@ -25,34 +25,45 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/es-shims/dunder-proto.git"
+		"url": "git+https://github.com/ljharb/es-define-property.git"
 	},
+	"keywords": [
+		"javascript",
+		"ecmascript",
+		"object",
+		"define",
+		"property",
+		"defineProperty",
+		"Object.defineProperty"
+	],
 	"author": "Jordan Harband <ljharb@gmail.com>",
 	"license": "MIT",
 	"bugs": {
-		"url": "https://github.com/es-shims/dunder-proto/issues"
+		"url": "https://github.com/ljharb/es-define-property/issues"
 	},
-	"homepage": "https://github.com/es-shims/dunder-proto#readme",
-	"dependencies": {
-		"call-bind-apply-helpers": "^1.0.1",
-		"es-errors": "^1.3.0",
-		"gopd": "^1.2.0"
-	},
+	"homepage": "https://github.com/ljharb/es-define-property#readme",
 	"devDependencies": {
-		"@arethetypeswrong/cli": "^0.17.1",
 		"@ljharb/eslint-config": "^21.1.1",
 		"@ljharb/tsconfig": "^0.2.2",
-		"@types/tape": "^5.7.0",
+		"@types/gopd": "^1.0.3",
+		"@types/tape": "^5.6.5",
 		"auto-changelog": "^2.5.0",
 		"encoding": "^0.1.13",
-		"eslint": "=8.8.0",
+		"eslint": "^8.8.0",
 		"evalmd": "^0.0.19",
+		"gopd": "^1.2.0",
 		"in-publish": "^2.0.1",
 		"npmignore": "^0.3.1",
 		"nyc": "^10.3.2",
 		"safe-publish-latest": "^2.0.0",
 		"tape": "^5.9.0",
 		"typescript": "next"
+	},
+	"engines": {
+		"node": ">= 0.4"
+	},
+	"testling": {
+		"files": "test/index.js"
 	},
 	"auto-changelog": {
 		"output": "CHANGELOG.md",
@@ -62,15 +73,9 @@
 		"backfillLimit": false,
 		"hideCredit": true
 	},
-	"testling": {
-		"files": "test/index.js"
-	},
 	"publishConfig": {
 		"ignore": [
 			".github/workflows"
 		]
-	},
-	"engines": {
-		"node": ">= 0.4"
 	}
 }
