--- a/package.json
+++ b/package.json
@@ -1,27 +1,62 @@
 {
-  "author": "Felix Geisendörfer <felix@debuggable.com> (http://debuggable.com/)",
-  "contributors": [
-    "Mike Atkins <apeherder@gmail.com>"
-  ],
-  "name": "delayed-stream",
-  "description": "Buffers events from a stream until you are ready to handle them.",
-  "license": "MIT",
-  "version": "1.0.0",
-  "homepage": "https://github.com/felixge/node-delayed-stream",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/felixge/node-delayed-stream.git"
-  },
-  "main": "./lib/delayed_stream",
-  "engines": {
-    "node": ">=0.4.0"
+  "name": "dotenv",
+  "version": "17.2.1",
+  "description": "Loads environment variables from .env file",
+  "main": "lib/main.js",
+  "types": "lib/main.d.ts",
+  "exports": {
+    ".": {
+      "types": "./lib/main.d.ts",
+      "require": "./lib/main.js",
+      "default": "./lib/main.js"
+    },
+    "./config": "./config.js",
+    "./config.js": "./config.js",
+    "./lib/env-options": "./lib/env-options.js",
+    "./lib/env-options.js": "./lib/env-options.js",
+    "./lib/cli-options": "./lib/cli-options.js",
+    "./lib/cli-options.js": "./lib/cli-options.js",
+    "./package.json": "./package.json"
   },
   "scripts": {
-    "test": "make test"
+    "dts-check": "tsc --project tests/types/tsconfig.json",
+    "lint": "standard",
+    "pretest": "npm run lint && npm run dts-check",
+    "test": "tap run --allow-empty-coverage --disable-coverage --timeout=60000",
+    "test:coverage": "tap run --show-full-coverage --timeout=60000 --coverage-report=text --coverage-report=lcov",
+    "prerelease": "npm test",
+    "release": "standard-version"
   },
-  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/motdotla/dotenv.git"
+  },
+  "homepage": "https://github.com/motdotla/dotenv#readme",
+  "funding": "https://dotenvx.com",
+  "keywords": [
+    "dotenv",
+    "env",
+    ".env",
+    "environment",
+    "variables",
+    "config",
+    "settings"
+  ],
+  "readmeFilename": "README.md",
+  "license": "BSD-2-Clause",
   "devDependencies": {
-    "fake": "0.2.0",
-    "far": "0.0.1"
+    "@types/node": "^18.11.3",
+    "decache": "^4.6.2",
+    "sinon": "^14.0.1",
+    "standard": "^17.0.0",
+    "standard-version": "^9.5.0",
+    "tap": "^19.2.0",
+    "typescript": "^4.8.4"
+  },
+  "engines": {
+    "node": ">=12"
+  },
+  "browser": {
+    "fs": false
   }
 }
