--- a/.eslintrc
+++ b/.eslintrc
@@ -4,10 +4,14 @@
 	"extends": "@ljharb",
 
 	"rules": {
-		"new-cap": ["error", {
+		"func-name-matching": 0,
+		"id-length": 0,
+		"new-cap": [2, {
 			"capIsNewExceptions": [
 				"GetIntrinsic",
 			],
 		}],
+		"no-extra-parens": 0,
+		"no-magic-numbers": 0,
 	},
 }
